@@ -1088,5 +1088,9 @@ cbpWindow_01_offset,shapes,Block,,,CBP Window 01 offset,,
 cbpTrafficLightOffset,blocks,Terrain,,,CBP Traffic Lights Offset,,
 cbpCandleTableLightOffset,blocks,Block,,,CBP Candle Table Light Offset,,
 cbpTrafficLightOffsetDesc,blocks,Light,,,CREATIVE: Is offset and requires no power and can be turned on/off when designing prefabs, Can be rotated which the vanilla version cant.,,
+cbpFlashlightDecorWhiteOffset,blocks,Block,,,CBP Flashlight Decor White Offset,,
+cbpFlashlightSideCenteredDecorWhiteOffset,blocks,Block,,,CBP Flashlight Side Centered Decor White Offset,,
+cbpFlashlightCornerDecorWhiteOffset,blocks,Block,,,CBP Flashlight Corner Decor White Offset,,
+cbpGlassBulletproofPlate,blocks,Block,,,CBP Glass Bullet proof Plate no waterflow,,
 loadingCustomBlocksPack,UI,Loading Screen,x,,The Custom Block Pack contains XML definitions for custom blocks used by multiple POI developers.,,,,,,,,,,,,,
 loadingCustomBlocksPack_title,UI,Loading Screen,x,,Custom Block Pack,,,,,,,, 
