@@ -1,5 +1,9 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0050 :
+* Added offset flashlights, fixed double waterflow, added bulletproofplate
+    with no waterflow.
+
 A21.2.001.0049 :
 * Added candle table offset; removed bowling ball corner.
 
